<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:layout_height="match_parent"
              android:layout_width="match_parent"
              android:orientation="vertical"
              android:padding="16dp"
              xmlns:android="http://schemas.android.com/apk/res/android">

    <TextView android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:ems="9"
              android:lines="3"
              android:layout_gravity="center_horizontal"
              android:text="@string/default_greeting"
              android:textColor="#AA90"
              android:textStyle="bold|italic"
              android:gravity="center"
    />

    <EditText android:layout_width="match_parent"
              android:layout_height="0dp"
              android:layout_weight="1"
              android:gravity="top|start"
              android:background="@color/default_background"
              android:layout_marginVertical="16dp"
              android:hint="@string/default_hint"
              android:inputType="textMultiLine"
    />

    <Button android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/button_text"
            android:textAllCaps="true"
            android:backgroundTint="@color/button_color"
            android:onClick="buttonOnClick"
    />

    <Switch android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:showText="true"
            android:gravity="start"
            android:text="@string/switch_text"
            android:checked="true"
            android:thumb="@color/thumb_color"
            android:textOn="@string/switch_on"
            android:textOff="@string/switch_off"
    />

    <CheckBox android:layout_width="match_parent"
              android:layout_height="wrap_content"/>

    <ToggleButton android:layout_width="match_parent"
                  android:layout_height="wrap_content"/>

</LinearLayout>